# zlog

./: CMakeLists.txt
cmake/: zlogConfig.cmake.in
include/: common.hpp  source_location.hpp  zlog.cppm  zlog.hpp  zlog_macro.h
include/zlog/: color.cppm  color.hpp  common.h  marco.h  module.h  source_location.cppm  source_location.hpp  stream.hpp  type.hpp
src/: main.cpp
